--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,5 @@ jobs:
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
-          projectPath: "CITestUnity/"
+          projectPath: "CITestUnity3D/CITestUnity/"
           githubToken: ${{ secrets.GITHUB_TOKEN }}
